# ot-harjoitustyo1

./: README.md
dokumentaatio/: arkkitehtuuri.md  changelog.md  kayttoohje.md  testaus.md  tuntikirjanpito.md  vaatimusmaarittely.md
laskarit/dokumentaatio/src/: pyproject.toml
laskarit/pacman/: .coverage  .pylintrc  pyproject.toml  tasks.py
laskarit/pacman/htmlcov/: .gitignore  index.html
laskarit/pacman/src/: index.py  jono.py  naytto.py  peli.py  pelinhallinta.py
laskarit/pacman/src/tests/: pacman_test.py
laskarit/viikko1/: gitlog.txt  komentorivi.txt
laskarit/viikko2/: .gitignore
laskarit/viikko2/maksukortti/: pyproject.toml
laskarit/viikko2/maksukortti/scr/tests/: maksukortti_test.py
laskarit/viikko2/unicafe/src/tests/: kassapaate_test.py  maksukortti_test.py
laskarit/viikko3/: monopoli.md  sekvenssi.md  sekvenssi2.md
pacman/: .coverage  .pylintrc  pyproject.toml  tasks.py
pacman/htmlcov/: d_145eef247bfb46b6_index_py.html  d_145eef247bfb46b6_jono_py.html  d_145eef247bfb46b6_naytto_py.html  d_145eef247bfb46b6_peli_py.html  d_145eef247bfb46b6_pelinhallinta_py.html  index.html  status.json
pacman/src/: .coverage  game.py  game_events.py  game_maze.py  game_over.py  index.py  jono.py  main.py  naytto.py  peli.py  pelinhallinta.py  player.py  playerpacman  starting_screen.py  walls.py
pacman/src/sprites/: player_ghost.py  player_pacman.py
pacman/src/tests/: pacman_test.py
poetry-testi/: pyproject.toml
