[tool.poetry]
name = "pacman"
version = "0.1.0"
description = ""
authors = ["Emma Tuovinen <emmasofia@live.fi>"]

[tool.poetry.dependencies]
python = "^3.8"
pygame = "^2.1.2"
invoke = "^1.7.0"
cowsay = "^4.0"

[tool.poetry.dev-dependencies]
pytest = "^7.1.1"
coverage = "^6.3.2"
pylint = "^2.13.5"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
